# ledgercpp

./: CMakeLists.txt  README.md
ledgercpp/: comm.hpp  error.cpp  hid_device.cpp  hid_device.hpp  ledger.cpp  ledger.hpp  transport.cpp  transport.hpp  utils.cpp
ledgercpp/hidapi/: hid.c  hidapi.h
